# mesa.crucible

./: .mailmap  meson.build  meson_options.txt
data/: meson.build
data/func.depthstencil.stencil-triangles/: meson.build
doc/: crucible-run.1.txt  meson.build
include/framework/runner/: runner.h
include/qonos/: qonos.h
include/tapi/: t_data.h  t_def.h
include/util/: simple_pipeline.h
misc/: crucible-completion.bash  glsl_scraper.py
src/cmd/: cmd.c  run.c
src/framework/: meson.build
src/framework/runner/: dispatcher.c  dispatcher.h  master.c  runner.c  worker.c  worker.h
src/framework/test/: t_data.c  t_phase_setup.c  test.c  test.h
src/qonos/: qonos.c  qonos_pipeline.c
src/tests/: meson.build
src/tests/bench/: copy-buffer.c  fill-buffer.c  ssbo-atomic.c
src/tests/bug/: 108909.c  gitlab-11607.c  gitlab-11787.c  gitlab-11800.c  gitlab-12477.c  gitlab-12794.c  gitlab-12888.c  gitlab-12927.c  gitlab-13149.c  gitlab-14054.c  gitlab-5711.c  gitlab-6680.c  gitlab-7471.c  gitlab-9013.c
src/tests/func/: calibrated-timestamps.c  draw-indirect.c  issue-11617.c  memory-budget.c  memory-fd.c  uniform-subgroup.c
src/tests/func/buffer/: buffer.c
src/tests/func/compute/: basic.c  derivative.c  local-id.c  num-workgroups.c  shared-memory.c  subgroup-quad.c
src/tests/func/depthstencil/: stencil_triangles_gen.py
src/tests/func/intel_shader_integer_functions2/: absoluteDifference.c  addSaturate.c  countZeros.c  intel_shader_integer_functions2_common.c  intel_shader_integer_functions2_common.h  multiply32x16.c  subtractSaturate.c
src/tests/func/mesh/: basic.c  clipculldistance.c  layer.c  multiview.c  outputs.c  push-constants.c  task-memory.c  viewportindex.c  workgroup-id.c
src/tests/func/mesh/ext/: basic.c  buffers.c  clipculldistance.c  layer.c  outputs.c  primitiveid.c  push-constants.c  task-memory.c  viewportindex.c  workgroup-id.c  workgroup-memory.c
src/tests/func/mesh/nv/: basic.c  buffers.c  clipculldistance.c  layer.c  multiview.c  outputs.c  primitiveid.c  task-memory.c  viewportindex.c  viewportmask.c  workgroup-id.c  workgroup-memory.c
src/tests/func/miptree/: miptree.c
src/tests/func/nv/: shader-sm-builtins.c
src/tests/func/push-constants/: dynamic-indirect.c
src/tests/func/renderpass/: clear.c
src/tests/func/shader/: shaderInt8-misc.c  shaderInt8Int16-shift.c
src/tests/func/sync/: semaphore-fd.c  semaphore.c
src/tests/func/tessellation/: basic.c
src/tests/func/ubo/: robust-push-ubo-full-range.c  robust-push-ubo.c
src/tests/stress/: buffer_limit.c
src/util/: cru_format.c  cru_image.c  cru_png_image.c  log.c  simple_pipeline.c
